MacViews: Reposition permission bubble on browser resize.

On MacViews currently, permission bubble does not reposition itself on resizing
the browser. The Cocoa implementation for PermissionPrompt
(PermissionBubbleCocoa) has a PermissionBubbleController instance which listens
for window resize notifications. On a Views browser, the repositioning is
facilitated by the call to BubbleDialogDelegateView::OnWidgetBoundsChanged.

But these approaches don't work for MacViews since PermissionPromptImpl does not
have a PermissionBubbleController instance. Also, on the Cocoa browser
BubbleDialogDelegateView::OnWidgetBoundsChanged won't be fired on a browser
window resize.

This CL updates windowDidResize: method on BrowserWindowController to inform the
PermissionRequestManager to update the permission bubble position. It does this
by introducing a new method updatePermissionBubbleAnchor on
BrowserWindowController (Private). This also removes the need to override
parentWindowDidResize: on PermissionBubbleController.

BUG=616006
TEST=Go to https://permission.site/. Ensure permission setting for Notifications
is "Ask By Default". Click on Notifications. Permission bubble should appear.
Resize the browser window by dragging the mouse. Ensure the permission bubble
repositions itself correctly. Try with and without
chrome://flags/#mac-views-webui-dialogs enabled.

Review-Url: https://codereview.chromium.org/2227513002
Cr-Commit-Position: refs/heads/master@{#410956}

Former-commit-id: 0b3631682321c7dee86957078c9c070a01bb3821